--- a/Ch05/05_04-challenge-create-artifacts-and-reports/Jenkinsfile
+++ b/Ch05/05_04-challenge-create-artifacts-and-reports/Jenkinsfile
@@ -1,13 +1,16 @@
 pipeline {
     agent any
-    // Add a tool configuration here...
+    tools 
+    {
+        maven 'Maven-3.8.4'
+    }
     stages {
         stage('Source') {
             steps {
                 git branch: 'main',
                     changelog: false,
                     poll: false,
-                    url: 'https://github.com/LinkedInLearning/essential-jenkins-2468076.git'
+                    url: 'https://github.com/rishikeshav2715/essential-jenkins-2468076.git'
             }
         }
         stage('Clean') {
@@ -15,7 +18,7 @@ pipeline {
                 dir("${env.WORKSPACE}/Ch05/05_04-challenge-create-artifacts-and-reports"){
                     echo "Cleaning the workspace..."
                     // Uncomment the following line after Maven is configured as a global tool
-                    // sh 'mvn clean'
+                    sh 'mvn clean'
                 }
             }
         }
@@ -24,7 +27,7 @@ pipeline {
                 dir("${env.WORKSPACE}/Ch05/05_04-challenge-create-artifacts-and-reports"){
                     echo "Running tests..."
                     // Uncomment the following line after Maven is configured as a global tool
-                    // sh 'mvn test'
+                    sh 'mvn test'
                 }
             }
         }
@@ -33,7 +36,7 @@ pipeline {
                 dir("${env.WORKSPACE}/Ch05/05_04-challenge-create-artifacts-and-reports"){
                     echo "Creating the JAR file..."
                     // Uncomment the following line after Maven is configured as a global tool
-                    // sh 'mvn package -DskipTests'
+                    sh 'mvn package -DskipTests'
                 }
             }
         }
@@ -42,9 +45,19 @@ pipeline {
         always {
             echo "Collecting jUnit test results..."
             // Add jUnit report collection here...
+            
+            junit skipMarkingBuildUnstable: true, 
+            stdioRetention: '', 
+            testResults: '**/TEST-com.learningjenkins.AppTest.xml'
 
             echo "Archiving the JAR file..."
             // Add artifact archiving here...
+            
+            archiveArtifacts allowEmptyArchive: true, 
+            artifacts: '**/hello-1.0-SNAPSHOT.jar', 
+            fingerprint: true, 
+            followSymlinks: false, 
+            onlyIfSuccessful: true
         }
     }
 }
